prevent layout shift & add margin to not found text

--- a/projects/kbtv-client/src/app/home/home-mission-card/home-mission-card.component.scss
+++ b/projects/kbtv-client/src/app/home/home-mission-card/home-mission-card.component.scss
@@ -8,7 +8,7 @@
 }
 
 .mission-card{
-    max-height: 320px;
+    height:100%;
     margin-bottom: $gap-size * 3px;
     background-color:mat-color($background, card);
     border-radius: 4px;
