--- a/projects/kbtv-client/src/app/home/home.component.scss
+++ b/projects/kbtv-client/src/app/home/home.component.scss
@@ -7,6 +7,11 @@
     overflow:hidden;
 }
 
+app-home-mission-card{
+    max-height: 320px;
+    flex: 1 1 1e-09px;
+}
+
 .main-container{
     background: mat-color($background, background);
     height:100%;
@@ -18,4 +23,5 @@
     transform:translateY(-50px);
     margin-bottom: -50px;
     padding: 8px 8px 0 8px;
+    flex: 1 1 1e-09px;
 }
